correctly recognize selected art

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,7 @@
 </head>
 <body class="hostElt">
 	<form id="text">
-        <h3 id="header">None</h3>
+        <h3 id="header" />
 		<!--div class="row">
             <label>Hook:</label>
 			<select id="textHookSelect">
