--- a/ui/index.html
+++ b/ui/index.html
@@ -10,25 +10,30 @@
 	<script src="js/main.js"></script>
 </head>
 <body class="hostElt">
-	<form id="text">
-        <h3 id="header" />
-		<!--div class="row">
-            <label>Hook:</label>
-			<select id="textHookSelect">
-				<option value="0">get</option>
-			</select>
-		</div>
-		<div class="row">
-            <label>Param:</label>
-            <select id="textParamSelect">
-                <option value="0">unit</option>
-                <option value="1">type</option>
-            </select>
-		</div>
-        <div class="row">
-            <label>Param Value:</label>
-            <input type="text" />
-        </div-->
-	</form>
+	<div id="content">
+		<form>
+			<h3 id="header">Text</h3>
+			<!--div class="row">
+				<label>Hook:</label>
+				<select id="textHookSelect">
+					<option value="0">get</option>
+				</select>
+			</div>
+			<div class="row">
+				<label>Param:</label>
+				<select id="textParamSelect">
+					<option value="0">unit</option>
+					<option value="1">type</option>
+				</select>
+			</div>
+			<div class="row">
+				<label>Param Value:</label>
+				<input type="text" />
+			</div-->
+		</form>
+		<footer>
+			<button id="hookFileBtn">&lt;Hook File&gt;</button>
+		</footer>
+	</div>
 </body>
 </html>
