display and store hook selection

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,24 +12,15 @@
 <body class="hostElt">
 	<div id="content">
 		<form>
-			<h3 id="header">Text</h3>
-			<!--div class="row">
+			<h3 id="header">&lt;ArtType&gt;</h3>
+			<div id="hookForm" class="row" hidden="true">
 				<label>Hook:</label>
-				<select id="textHookSelect">
-					<option value="0">get</option>
-				</select>
+				<select id="hookSelect" />
 			</div>
-			<div class="row">
+			<div id="paramForm" class="row" hidden="true">
 				<label>Param:</label>
-				<select id="textParamSelect">
-					<option value="0">unit</option>
-					<option value="1">type</option>
-				</select>
+				<select id="paramSelect" />
 			</div>
-			<div class="row">
-				<label>Param Value:</label>
-				<input type="text" />
-			</div-->
 		</form>
 		<footer>
 			<button id="hookFileBtn">&lt;Hook File&gt;</button>
