display, store, and export params

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,21 +10,13 @@
 	<script src="js/main.js"></script>
 </head>
 <body class="hostElt">
-	<div id="content">
-		<form>
-			<h3 id="header">&lt;ArtType&gt;</h3>
-			<div id="hookForm" class="row" hidden="true">
-				<label>Hook:</label>
-				<select id="hookSelect" />
-			</div>
-			<div id="paramForm" class="row" hidden="true">
-				<label>Param:</label>
-				<select id="paramSelect" />
-			</div>
-		</form>
+	<form id="content">
+		<h3 id="artType"></h3>
+		<div id="hookSelectContainer"></div>
+		<div id="paramSelectContainer"></div>
 		<footer>
 			<button id="hookFileBtn">&lt;Hook File&gt;</button>
 		</footer>
-	</div>
+	</form>
 </body>
 </html>
